# 3210

./: README.md
CumulativeIntegral/C/: integrate.c
Fast_Fourier_Transform/: CmakeLists.txt  dft.c  dft_fft_pythontesting.py  ece3210_lab07.py  fastFourier.c  fastFourier.h  fft.c  main.cpp
FourierSeries/C/: signalsSystems04.c
FourierSeries/Python/: signalsSystems04.py
ImpulseResponse/: signalsSystem02.py
LTI system response to periodic signal/: signalsSystems.py
Lab01/: CMakeLists.txt
Lab01/include/: ece3210_lab01_samjensen  integrate.h
Lab01/python/: test_lab01.py
Lab01/src/: main.cpp
Lab05/: lab05.py
Lab10/: ltid.py
NumericalConvolution/C/: signalsSystems03.c
NumericalConvolution/Python/: signalsSystems03.py
